--- a/NewMatrixModule/packages.config
+++ b/NewMatrixModule/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net4" />
-  <package id="log4net" version="2.0.5" targetFramework="net40" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net40" requireReinstallation="true" />
+  <package id="log4net" version="2.0.5" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.Net.Compilers" version="1.2.2" targetFramework="net40" developmentDependency="true" />
 </packages>
