--- a/HostServer/HostServer.csproj
+++ b/HostServer/HostServer.csproj
@@ -88,7 +88,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnviromentVariables.cs" />
     <Compile Include="IPointInfo.cs" />
+    <Compile Include="LogBootstrapper.cs" />
     <Compile Include="PointInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
