--- a/RestApi/RestApi.csproj
+++ b/RestApi/RestApi.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\ModuleController.cs" />
     <Compile Include="Controllers\ParcsController.cs" />
+    <Compile Include="EnvironmentVariables.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bootstrap\Startup.cs" />
     <Compile Include="Services\IModuleRunner.cs" />
