--- a/NewMatrixModule/NewMatrixModule.csproj
+++ b/NewMatrixModule/NewMatrixModule.csproj
@@ -59,6 +59,12 @@
       <HintPath>..\packages\log4net.2.0.5\lib\net40-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Parcs, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Parcs.1.0.1\lib\net461\Parcs.dll</HintPath>
+    </Reference>
+    <Reference Include="Parcs.Module.CommandLine, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Parcs.Module.CommandLine.1.0.1\lib\net461\Parcs.Module.CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -75,20 +81,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".dockerignore" />
     <None Include="App.config" />
+    <None Include="Dockerfile" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Parcs.Module.CommandLine\Parcs.Module.CommandLine.csproj">
-      <Project>{b466666e-3104-4cf5-ade0-9441bb964aea}</Project>
-      <Name>Parcs.Module.CommandLine</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Parcs\Parcs.csproj">
-      <Project>{73e7db23-be33-4c7f-89b5-e27523e71496}</Project>
-      <Name>Parcs</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
