--- a/HostServer/packages.config
+++ b/HostServer/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
@@ -11,4 +10,10 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Serilog" version="2.7.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.MSSqlServer" version="5.1.2" targetFramework="net461" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net461" />
 </packages>
