--- a/Daemon/DaemonPr.csproj
+++ b/Daemon/DaemonPr.csproj
@@ -78,6 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="buildAndPush.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Dockerfile">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
