--- a/RestApi/app/package.json
+++ b/RestApi/app/package.json
@@ -4,23 +4,25 @@
   "description": "parcs ui",
   "main": "index.js",
   "scripts": {
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "style": "css/bootstrap.css",
   "author": "Mykola & Khavro",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.5.5",
-    "angular-ui-bootstrap": "^1.3.3",
+    "angular": "^1.7.5",
     "angular-local-storage": "^0.2.7",
-    "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.6",
-    "browserify": "^13.0.1",
+    "angular-ui-bootstrap": "^1.3.3",
+    "angular-ui-router": "^0.3.2",
+    "bootstrap": "^3.3.7",
+    "browserify": "^13.3.0",
     "gulp": "^3.9.1",
-    "gulp-jshint": "^2.0.1",
-    "gulp-sass": "^2.3.1",
-    "highcharts": "^4.2.5",
-    "jshint": "^2.9.2",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-cli": "^2.0.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-sass": "^4.0.1",
+    "highcharts": "^4.2.7",
+    "jshint": "^2.9.6",
+    "vinyl-source-stream": "^1.1.2"
   }
 }
