--- a/HostServer/packages.config
+++ b/HostServer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Elasticsearch.Net" version="5.5.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
@@ -12,7 +13,8 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Serilog" version="2.7.1" targetFramework="net461" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
-  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Elasticsearch" version="5.7.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net461" />
   <package id="Serilog.Sinks.MSSqlServer" version="5.1.2" targetFramework="net461" />
   <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net461" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net461" />
