--- a/Daemon/packages.config
+++ b/Daemon/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.5" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.Net.Compilers" version="1.2.2" targetFramework="net40" developmentDependency="true" />
+  <package id="Serilog" version="2.7.1" targetFramework="net461" />
+  <package id="Serilog.Enrichers.Environment" version="2.1.2" targetFramework="net461" />
+  <package id="Serilog.Enrichers.Thread" version="3.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net461" />
 </packages>
