--- a/HostServer/packages.config
+++ b/HostServer/packages.config
@@ -12,6 +12,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Serilog" version="2.7.1" targetFramework="net461" />
+  <package id="Serilog.Enrichers.Thread" version="3.0.0" targetFramework="net461" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
   <package id="Serilog.Sinks.Elasticsearch" version="5.7.0" targetFramework="net461" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net461" />
